--- a/photo-sharing-server/requirements.txt
+++ b/photo-sharing-server/requirements.txt
@@ -9,6 +9,7 @@ Flask-Bcrypt==1.0.1
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
+psycopg2-binary==2.8.6
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
