--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - '5001:5000'
+    volumes:
+      - './photo-sharing-server/storage:/app/storage'
     depends_on:
       - db
     environment:
@@ -30,5 +32,7 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
 volumes:
+  myvolume:
+    driver: local
   postgres_data:
     driver: local
