--- a/photo-sharing-server/requirements.txt
+++ b/photo-sharing-server/requirements.txt
@@ -22,3 +22,5 @@ typing_extensions==4.6.3
 virtualenv==20.23.0
 virtualenv-clone==0.5.7
 Werkzeug==2.3.6
+python-dotenv==1.0.0
+google-cloud-vision==3.4.4
